--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@ant-design/icons": "^5.1.4",
     "antd": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
